--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,5 @@
-<!-- <app-orbit-list [satellites]="sourceList"></app-orbit-list> -->
 <app-orbit-list [satellites]="displayList"></app-orbit-list>
 <div class="search-form">
-    <input searchTerm type="text" name="searchTerm" (keyup.enter)="search(searchTerm.value)">
+    <input #searchTerm type="text" (keyup.enter)="search(searchTerm.value)">
     <button type="search" (click)="search(searchTerm.value)">Search</button>
 </div>
-
-<!-- <div class="search-form">
-    <input type="text" #searchTerm name="searchTerm" (keyup.enter)="search(searchTerm.value)">
-    <button (click)="show(searchTerm" )>Search</button>
-</div> -->
